--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 :root {
-  font-family: "Inter","sans-serif";
+  font-family: "Inter", "sans-serif";
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -20,11 +20,11 @@ body {
   overflow-x: hidden;
   background-color: #09090b;
 }
-#root{
-  width: 100vw; 
+#root {
+  width: 100vw;
   background-color: #09090b;
   overflow-x: hidden;
-  overscroll-behavior: auto ;
+  overscroll-behavior: auto;
 }
 
 ::-webkit-scrollbar {
@@ -44,9 +44,15 @@ body {
   background: #3f3f46;
 }
 @keyframes float {
-  0% { transform: translateY(0px); }
-  50% { transform: translateY(-20px); }
-  100% { transform: translateY(0px); }
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 .bg-grid-white {
